# node-wallhaven-dl

./: .gitignore  ARCHITECTURE.md  IMPLEMENTATION_CHECKLIST.md  LICENSE  README.md  components.json  index-new.js  index.html  index.js  package-lock.json  package.json  page_data.json  tsconfig.app.json  tsconfig.node.json  vite.config.ts
.github/workflows/: release-tauri.yml
scripts/: build-dmg.sh  sign-macos.js
specs/: spec-prompt.md
src/: App.test.tsx  App.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/migrations/: 0001_create_persistence_tables.sql  0002_add_download_directory_settings.sql  0003_add_gallery_metadata.sql
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: downloads.rs  gallery.rs  media.rs  mod.rs  search.rs  settings.rs
src-tauri/src/db/: archive_repository.rs  mod.rs  settings_repository.rs
src-tauri/src/models/: download.rs  gallery.rs  mod.rs  search.rs  settings.rs
src-tauri/src/services/: archive_service.rs  download_events.rs  download_manager.rs  mod.rs  path_service.rs  wallhaven_client.rs
src/api/: index.js
src/app/: index.js
src/cli/: index.js
src/components/: app-shell.tsx  confirm-dialog.test.tsx  confirm-dialog.tsx  empty-state.tsx  error-state.tsx  feature-placeholder.tsx  loading-skeleton.tsx  mac-window-chrome.tsx  page-heading.tsx  proxied-image.test.tsx  proxied-image.tsx  sidebar.test.tsx  sidebar.tsx  theme-accent-provider.tsx  theme-provider.tsx  theme-toggle.test.tsx  theme-toggle.tsx  toast-provider.tsx  top-bar.tsx
src/config/: index.js
(+77 files in other folders)
