[package]
name = "wallhaven_desktop"
version = "0.1.0"
description = "Wallhaven desktop scaffold powered by Tauri"
authors = ["zhengyh"]
license = "MIT"
repository = ""
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "wallhaven_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
sqlx = { version = "0.8", default-features = false, features = ["sqlite", "runtime-tokio-rustls", "migrate", "macros"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = ["protocol-asset"] }
tauri-plugin-store = "2"
uuid = { version = "1", features = ["v4"] }

[dev-dependencies]
tempfile = "3"
wiremock = "0.6"
